--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,41 @@
-fastapi==0.95.0
-uvicorn==0.21.1
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-sqlalchemy==2.0.9
-pydantic==1.10.7
-python-dotenv==1.0.0
-openai-whisper==20230314
+alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.2.0
+colorama==0.4.6
+cryptography==44.0.3
+ecdsa==0.19.1
+fastapi==0.115.12
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+Mako==1.3.10
+MarkupSafe==3.0.2
+packaging==25.0
+passlib==1.7.4
+pluggy==1.6.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.22.0
+pyasn1==0.4.8
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pytest==8.3.5
+python-dotenv==1.1.0
+python-jose==3.4.0
 python-magic==0.4.27
-transformers==4.27.4
-torch==2.0.0
-prometheus-fastapi-instrumentator==6.1.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-alembic==1.10.4
-pytest==7.3.1
-httpx==0.23.3
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.2
